--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "bootstrap-icons": "^1.13.1",
     "boxicons": "^2.1.4",
     "element-plus": "^2.7.6",
     "i18n": "^0.15.1",
